# UnifiOptimizer

./: .flake8  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Go.sh  README.md  WHATS_NEW.md  analysis_cache_20260214_234900.json  check_code.sh  diagnose_rssi.py  format_code.sh  install.sh  optimizer.py  pyproject.toml  regenerate_report.py  requirements-dev.txt  requirements.txt  run_all_tests.py  start.sh  test_advanced_features.py  test_hourly_tracking.py  verify_setup.sh
.clubhouse/: agents.json
.github/: CI_CD_DOCUMENTATION.md  CI_IMPLEMENTATION_SUMMARY.md  DEPLOYMENT_CHECKLIST.md  SETUP_GUIDE.md  check_ci_status.py
api/: __init__.py  cloudkey_gen2_client.py  cloudkey_jwt_helper.py  csrf_token_manager.py
core/: __init__.py  advanced_analyzer.py  ai_advisor.py  change_applier.py  channel_optimizer.py  client_health.py  client_rssi_tracker.py  diagnose_clients.py  html_report_generator.py  html_report_generator_share.py  manufacturer_analyzer.py  network_analyzer.py  network_health_analyzer.py  optimize_network.py  report_v2.py  switch_analyzer.py  trend_analyzer.py  trend_report.py
data/: config.json.template  config.yaml  wifi_device_capabilities.json
docs/: API_ACCESS_VERIFICATION.md  CLIENT_CAPABILITY_AP_FIX.md  CODE_QUALITY.md  DEVELOPER_SETUP.md  DEVICE_DATABASE.md  PACKET_LOSS_HTML_REPORT.md  PACKET_LOSS_TRACKING.md  VERBOSE_LOGGING.md  VERBOSE_MODE.md
server/: __init__.py  main.py
tests/: README.md  __init__.py  conftest.py  run_tests.py  test_6ghz_min_rssi.py  test_6ghz_power_modes.py  test_6ghz_psc_channels.py  test_6ghz_support.py  (+24 more)
(+73 files in other folders)
